--- a/phpstan.neon
+++ b/phpstan.neon
@@ -8,3 +8,7 @@ parameters:
 
   level: 7
   inferPrivatePropertyTypeFromConstructor: true
+
+  ignoreErrors: # due to Doctrine API
+    - '#Method Doctrine\\DBAL\\Driver\\ResultStatement::fetch\(\) invoked with 3 parameters, 0-1 required.#'
+    - '#Method Doctrine\\DBAL\\Driver\\ResultStatement::fetchAll\(\) invoked with 3 parameters, 0-1 required.#'
