--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
     "auxmoney/opentracing-bundle-core": "^0.3.6",
     "opentracing/opentracing": "1.0.0-beta5@beta",
     "doctrine/doctrine-bundle": "^1.11|^2.0",
-    "doctrine/dbal": "^2.6",
-    "symfony/stopwatch": "^3.4|^4.2|^5.0"
+    "doctrine/dbal": "^2.6"
   },
   "require-dev": {
     "roave/security-advisories": "dev-master",
