--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,7 @@
       "vendor/auxmoney/opentracing-bundle-core/Tests/Functional/Scripts/setup.sh",
       "Tests/Functional/Scripts/requireAdditionalVendors.sh",
       "vendor/auxmoney/opentracing-bundle-core/Tests/Functional/Scripts/createResetPoint.sh",
+      "Tests/Functional/Scripts/requireORMAndCreateResetPoint.sh",
       "vendor/bin/phpunit --colors=never --testsuite=functional --no-coverage",
       "vendor/auxmoney/opentracing-bundle-core/Tests/Functional/Scripts/teardown.sh"
     ],
