--- a/Tests/Functional/FunctionalTest.orm-entity.expected.yaml
+++ b/Tests/Functional/FunctionalTest.orm-entity.expected.yaml
@@ -28,7 +28,7 @@ children:
             value: 'INSERT INTO test_table (str) VALUES (?)'
           -
             key: db.parameters
-            value: '[]'
+            value: '{"1":"a"}'
   -
     operationName: 'DBAL: SELECT test_table'
     tags:
@@ -53,7 +53,7 @@ children:
             value: 'INSERT INTO test_table (str) VALUES (?)'
           -
             key: db.parameters
-            value: '[]'
+            value: '{"1":"b"}'
   -
     operationName: 'DBAL: SELECT test_table'
     tags:
@@ -78,7 +78,7 @@ children:
             value: 'UPDATE test_table SET str = ? WHERE id = ?'
           -
             key: db.parameters
-            value: '[]'
+            value: '{"1":null,"2":1}'
   -
     operationName: 'DBAL: SELECT test_table'
     tags:
@@ -103,7 +103,7 @@ children:
             value: 'DELETE FROM test_table WHERE id = ?'
           -
             key: db.parameters
-            value: '[]'
+            value: '{"1":2}'
   -
     operationName: 'DBAL: SELECT test_table'
     tags:
