--- a/Tests/Functional/FunctionalTest.dbal-prepared-statements.expected.yaml
+++ b/Tests/Functional/FunctionalTest.dbal-prepared-statements.expected.yaml
@@ -57,7 +57,7 @@ children:
         value: 'UPDATE test_table SET str = ? WHERE str = ?'
       -
         key: db.parameters
-        value: '[]'
+        value: '{"1":null,"2":"a"}'
   -
     operationName: 'DBAL: SELECT test_table'
     tags:
