--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,68 @@
 {
   "name": "auxmoney/opentracing-bundle-doctrine-dbal",
+  "description": "Symfony Opentracing bundle extension for Doctrine DBAL and ORM",
+  "keywords": [
+    "auxmoney",
+    "opentracing",
+    "opentracing-bundle",
+    "symfony",
+    "symfony-bundle",
+    "distributed-tracing",
+    "doctrine",
+    "dbal",
+    "orm"
+  ],
   "type": "symfony-bundle",
   "license": "MIT",
-  "require": {}
+  "require": {
+    "php": "^7.1.33",
+    "ext-json": "*",
+    "auxmoney/opentracing-bundle-core": "^0.4",
+    "opentracing/opentracing": "1.0.0-beta5@beta",
+    "doctrine/doctrine-bundle": "^1.11|^2.0",
+    "doctrine/dbal": "^2.6"
+  },
+  "require-dev": {
+    "roave/security-advisories": "dev-master",
+    "phpunit/phpunit": "^7.5",
+    "phpstan/phpstan": "^0.12",
+    "squizlabs/php_codesniffer": "^3.5",
+    "phpmd/phpmd": "^2.7",
+    "php-coveralls/php-coveralls": "^2.2",
+    "symfony/filesystem": "*",
+    "symfony/process": "*",
+    "symfony/yaml": "*",
+    "mtdowling/jmespath.php": "^2.5"
+  },
+  "autoload": {
+    "psr-4": {
+      "Auxmoney\\OpentracingDoctrineDBALBundle\\": "./"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Auxmoney\\OpentracingDoctrineDBALBundle\\Tests\\": "./Tests/"
+    }
+  },
+  "scripts": {
+    "quality": [
+      "@phpcs",
+      "@phpmd",
+      "@phpstan",
+      "@phpunit"
+    ],
+    "phpmd": "vendor/bin/phpmd . text cleancode,codesize,controversial,design,naming,unusedcode --exclude vendor,Tests",
+    "phpcs": "vendor/bin/phpcs",
+    "phpunit": "phpdbg -qrr vendor/bin/phpunit --colors=never --testsuite=unit",
+    "phpunit-functional": [
+      "vendor/auxmoney/opentracing-bundle-core/Tests/Functional/Scripts/checkEnvironment.sh",
+      "vendor/auxmoney/opentracing-bundle-core/Tests/Functional/Scripts/setup.sh",
+      "Tests/Functional/Scripts/requireAdditionalVendors.sh",
+      "vendor/auxmoney/opentracing-bundle-core/Tests/Functional/Scripts/createResetPoint.sh",
+      "Tests/Functional/Scripts/requireORMAndCreateResetPoint.sh",
+      "vendor/bin/phpunit --colors=never --testsuite=functional --no-coverage",
+      "vendor/auxmoney/opentracing-bundle-core/Tests/Functional/Scripts/teardown.sh"
+    ],
+    "phpstan": "vendor/bin/phpstan analyse --no-progress"
+  }
 }
