--- a/Tests/Functional/FunctionalTest.dbal-connection-api.expected.yaml
+++ b/Tests/Functional/FunctionalTest.dbal-connection-api.expected.yaml
@@ -1,6 +1,9 @@
 operationName: 'test:doctrine:dbal-connection-api'
 tags:
   -
+    key: auxmoney-opentracing-bundle.span-origin
+    value: 'core:command'
+  -
     key: command.exit-code
     value: 0
 children:
@@ -8,98 +11,131 @@ children:
     operationName: 'DBAL: SELECT test_table'
     tags:
       -
-        key: db.statement
-        value: 'SELECT COUNT(*) FROM test_table WHERE str IS NOT NULL'
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:select'
       -
         key: db.parameters
         value: '[]'
+      -
+        key: db.statement
+        value: 'SELECT COUNT(*) FROM test_table WHERE str IS NOT NULL'
   -
     operationName: 'DBAL: INSERT INTO test_table'
     tags:
       -
-        key: db.statement
-        value: 'INSERT INTO test_table (str) VALUES (?)'
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:insert'
       -
         key: db.parameters
         value: '{"1":"a"}'
+      -
+        key: db.statement
+        value: 'INSERT INTO test_table (str) VALUES (?)'
   -
     operationName: 'DBAL: SELECT test_table'
     tags:
       -
-        key: db.statement
-        value: 'SELECT COUNT(*) FROM test_table WHERE str IS NOT NULL'
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:select'
       -
         key: db.parameters
         value: '[]'
+      -
+        key: db.statement
+        value: 'SELECT COUNT(*) FROM test_table WHERE str IS NOT NULL'
   -
     operationName: 'DBAL: INSERT INTO test_table'
     tags:
       -
-        key: db.statement
-        value: 'INSERT INTO test_table (str) VALUES (?)'
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:insert'
       -
         key: db.parameters
         value: '{"1":"b"}'
+      -
+        key: db.statement
+        value: 'INSERT INTO test_table (str) VALUES (?)'
   -
     operationName: 'DBAL: SELECT test_table'
     tags:
       -
-        key: db.statement
-        value: 'SELECT COUNT(*) FROM test_table WHERE str IS NOT NULL'
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:select'
       -
         key: db.parameters
         value: '[]'
+      -
+        key: db.statement
+        value: 'SELECT COUNT(*) FROM test_table WHERE str IS NOT NULL'
   -
     operationName: 'DBAL: UPDATE test_table'
     tags:
       -
-        key: db.statement
-        value: 'UPDATE test_table SET str = ? WHERE str = ?'
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:update'
       -
         key: db.parameters
         value: '{"1":null,"2":"a"}'
+      -
+        key: db.statement
+        value: 'UPDATE test_table SET str = ? WHERE str = ?'
   -
     operationName: 'DBAL: SELECT test_table'
     tags:
+      -
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:select'
+      -
+        key: db.parameters
+        value: '[]'
       -
         key: db.statement
         value: 'SELECT COUNT(*) FROM test_table WHERE str IS NOT NULL'
-      -
-        key: db.parameters
-        value: '[]'
   -
     operationName: 'DBAL: SELECT test_table'
     tags:
       -
-        key: db.statement
-        value: 'SELECT id FROM test_table WHERE str IS NOT NULL'
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:select'
       -
         key: db.parameters
         value: '[]'
+      -
+        key: db.statement
+        value: 'SELECT id FROM test_table WHERE str IS NOT NULL'
   -
     operationName: 'DBAL: DELETE test_table'
     tags:
       -
-        key: db.statement
-        value: 'DELETE FROM test_table WHERE id = ?'
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:delete'
       -
         key: db.parameters
         value: '{"1":"2"}'
+      -
+        key: db.statement
+        value: 'DELETE FROM test_table WHERE id = ?'
   -
     operationName: 'DBAL: SELECT test_table'
     tags:
       -
-        key: db.statement
-        value: 'SELECT COUNT(*) FROM test_table WHERE str IS NOT NULL'
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:select'
       -
         key: db.parameters
         value: '[]'
+      -
+        key: db.statement
+        value: 'SELECT COUNT(*) FROM test_table WHERE str IS NOT NULL'
   -
     operationName: 'DBAL: UPDATE test_table'
     tags:
       -
-        key: db.statement
-        value: 'UPDATE test_table SET str = NULL WHERE str IS NOT NULL'
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:update'
       -
         key: db.parameters
         value: '[]'
+      -
+        key: db.statement
+        value: 'UPDATE test_table SET str = NULL WHERE str IS NOT NULL'
