--- a/Tests/Functional/FunctionalTest.dbal-transactions.expected.yaml
+++ b/Tests/Functional/FunctionalTest.dbal-transactions.expected.yaml
@@ -1,12 +1,18 @@
 operationName: 'test:doctrine:dbal-transactions'
 tags:
   -
+    key: auxmoney-opentracing-bundle.span-origin
+    value: 'core:command'
+  -
     key: command.exit-code
     value: 0
 children:
   -
     operationName: 'DBAL: TRANSACTION'
     tags:
+      -
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:transaction'
       -
         key: db.transaction.end
         value: commit
@@ -15,68 +21,92 @@ children:
         operationName: 'DBAL: SELECT test_table'
         tags:
           -
-            key: db.statement
-            value: 'SELECT COUNT(*) FROM test_table WHERE str IS NOT NULL'
+            key: auxmoney-opentracing-bundle.span-origin
+            value: 'DBAL:select'
           -
             key: db.parameters
             value: '[]'
+          -
+            key: db.statement
+            value: 'SELECT COUNT(*) FROM test_table WHERE str IS NOT NULL'
       -
         operationName: 'DBAL: INSERT INTO test_table'
         tags:
           -
-            key: db.statement
-            value: 'INSERT INTO test_table (str) VALUES (?)'
+            key: auxmoney-opentracing-bundle.span-origin
+            value: 'DBAL:insert'
           -
             key: db.parameters
             value: '{"1":"a"}'
+          -
+            key: db.statement
+            value: 'INSERT INTO test_table (str) VALUES (?)'
       -
         operationName: 'DBAL: SELECT test_table'
         tags:
+          -
+            key: auxmoney-opentracing-bundle.span-origin
+            value: 'DBAL:select'
+          -
+            key: db.parameters
+            value: '[]'
           -
             key: db.statement
             value: 'SELECT COUNT(*) FROM test_table WHERE str IS NOT NULL'
-          -
-            key: db.parameters
-            value: '[]'
       -
         operationName: 'DBAL: SELECT test_table'
         tags:
           -
-            key: db.statement
-            value: 'SELECT id FROM test_table WHERE str IS NOT NULL'
+            key: auxmoney-opentracing-bundle.span-origin
+            value: 'DBAL:select'
           -
             key: db.parameters
             value: '[]'
+          -
+            key: db.statement
+            value: 'SELECT id FROM test_table WHERE str IS NOT NULL'
       -
         operationName: 'DBAL: UPDATE test_table'
         tags:
           -
-            key: db.statement
-            value: 'UPDATE test_table SET str = ? WHERE id = ?'
+            key: auxmoney-opentracing-bundle.span-origin
+            value: 'DBAL:update'
           -
             key: db.parameters
             value: '{"1":null,"2":"1"}'
+          -
+            key: db.statement
+            value: 'UPDATE test_table SET str = ? WHERE id = ?'
       -
         operationName: 'DBAL: SELECT test_table'
         tags:
           -
-            key: db.statement
-            value: 'SELECT COUNT(*) FROM test_table WHERE str IS NOT NULL'
+            key: auxmoney-opentracing-bundle.span-origin
+            value: 'DBAL:select'
           -
             key: db.parameters
             value: '[]'
+          -
+            key: db.statement
+            value: 'SELECT COUNT(*) FROM test_table WHERE str IS NOT NULL'
   -
     operationName: 'DBAL: SELECT test_table'
     tags:
       -
-        key: db.statement
-        value: 'SELECT COUNT(*) FROM test_table WHERE str IS NOT NULL'
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:select'
       -
         key: db.parameters
         value: '[]'
+      -
+        key: db.statement
+        value: 'SELECT COUNT(*) FROM test_table WHERE str IS NOT NULL'
   -
     operationName: 'DBAL: TRANSACTION'
     tags:
+      -
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:transaction'
       -
         key: db.transaction.end
         value: rollBack
@@ -85,23 +115,32 @@ children:
         operationName: 'DBAL: INSERT INTO test_table'
         tags:
           -
-            key: db.statement
-            value: 'INSERT INTO test_table (str) VALUES (?)'
+            key: auxmoney-opentracing-bundle.span-origin
+            value: 'DBAL:insert'
           -
             key: db.parameters
             value: '{"1":"a"}'
+          -
+            key: db.statement
+            value: 'INSERT INTO test_table (str) VALUES (?)'
       -
         operationName: 'DBAL: SELECT test_table'
         tags:
           -
-            key: db.statement
-            value: 'SELECT COUNT(*) FROM test_table WHERE str IS NOT NULL'
+            key: auxmoney-opentracing-bundle.span-origin
+            value: 'DBAL:select'
           -
             key: db.parameters
             value: '[]'
+          -
+            key: db.statement
+            value: 'SELECT COUNT(*) FROM test_table WHERE str IS NOT NULL'
   -
     operationName: 'DBAL: TRANSACTION'
     tags:
+      -
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:transaction'
       -
         key: db.transaction.end
         value: commit
@@ -110,17 +149,23 @@ children:
         operationName: 'DBAL: SELECT test_table'
         tags:
           -
-            key: db.statement
-            value: 'SELECT COUNT(*) FROM test_table WHERE str IS NOT NULL'
+            key: auxmoney-opentracing-bundle.span-origin
+            value: 'DBAL:select'
           -
             key: db.parameters
             value: '[]'
+          -
+            key: db.statement
+            value: 'SELECT COUNT(*) FROM test_table WHERE str IS NOT NULL'
   -
     operationName: 'DBAL: UPDATE test_table'
     tags:
       -
-        key: db.statement
-        value: 'UPDATE test_table SET str = NULL WHERE str IS NOT NULL'
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:update'
       -
         key: db.parameters
         value: '[]'
+      -
+        key: db.statement
+        value: 'UPDATE test_table SET str = NULL WHERE str IS NOT NULL'
