--- a/Tests/Functional/FunctionalTest.orm-entity.expected.yaml
+++ b/Tests/Functional/FunctionalTest.orm-entity.expected.yaml
@@ -1,6 +1,9 @@
 operationName: 'test:doctrine:orm-entity'
 tags:
   -
+    key: auxmoney-opentracing-bundle.span-origin
+    value: 'core:command'
+  -
     key: command.exit-code
     value: 0
 children:
@@ -8,14 +11,20 @@ children:
     operationName: 'DBAL: SELECT test_table'
     tags:
       -
-        key: db.statement
-        value: 'SELECT COUNT(t0_.id) AS sclr_0 FROM test_table t0_ WHERE t0_.str IS NOT NULL'
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:select'
       -
         key: db.parameters
         value: '[]'
+      -
+        key: db.statement
+        value: 'SELECT COUNT(t0_.id) AS sclr_0 FROM test_table t0_ WHERE t0_.str IS NOT NULL'
   -
     operationName: 'DBAL: TRANSACTION'
     tags:
+      -
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:transaction'
       -
         key: db.transaction.end
         value: commit
@@ -24,23 +33,32 @@ children:
         operationName: 'DBAL: INSERT INTO test_table'
         tags:
           -
-            key: db.statement
-            value: 'INSERT INTO test_table (str) VALUES (?)'
+            key: auxmoney-opentracing-bundle.span-origin
+            value: 'DBAL:insert'
           -
             key: db.parameters
             value: '{"1":"a"}'
+          -
+            key: db.statement
+            value: 'INSERT INTO test_table (str) VALUES (?)'
   -
     operationName: 'DBAL: SELECT test_table'
     tags:
       -
-        key: db.statement
-        value: 'SELECT COUNT(t0_.id) AS sclr_0 FROM test_table t0_ WHERE t0_.str IS NOT NULL'
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:select'
       -
         key: db.parameters
         value: '[]'
+      -
+        key: db.statement
+        value: 'SELECT COUNT(t0_.id) AS sclr_0 FROM test_table t0_ WHERE t0_.str IS NOT NULL'
   -
     operationName: 'DBAL: TRANSACTION'
     tags:
+      -
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:transaction'
       -
         key: db.transaction.end
         value: commit
@@ -49,23 +67,32 @@ children:
         operationName: 'DBAL: INSERT INTO test_table'
         tags:
           -
-            key: db.statement
-            value: 'INSERT INTO test_table (str) VALUES (?)'
+            key: auxmoney-opentracing-bundle.span-origin
+            value: 'DBAL:insert'
           -
             key: db.parameters
             value: '{"1":"b"}'
+          -
+            key: db.statement
+            value: 'INSERT INTO test_table (str) VALUES (?)'
   -
     operationName: 'DBAL: SELECT test_table'
     tags:
       -
-        key: db.statement
-        value: 'SELECT COUNT(t0_.id) AS sclr_0 FROM test_table t0_ WHERE t0_.str IS NOT NULL'
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:select'
       -
         key: db.parameters
         value: '[]'
+      -
+        key: db.statement
+        value: 'SELECT COUNT(t0_.id) AS sclr_0 FROM test_table t0_ WHERE t0_.str IS NOT NULL'
   -
     operationName: 'DBAL: TRANSACTION'
     tags:
+      -
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:transaction'
       -
         key: db.transaction.end
         value: commit
@@ -74,23 +101,32 @@ children:
         operationName: 'DBAL: UPDATE test_table'
         tags:
           -
-            key: db.statement
-            value: 'UPDATE test_table SET str = ? WHERE id = ?'
+            key: auxmoney-opentracing-bundle.span-origin
+            value: 'DBAL:update'
           -
             key: db.parameters
             value: '{"1":null,"2":1}'
+          -
+            key: db.statement
+            value: 'UPDATE test_table SET str = ? WHERE id = ?'
   -
     operationName: 'DBAL: SELECT test_table'
     tags:
       -
-        key: db.statement
-        value: 'SELECT COUNT(t0_.id) AS sclr_0 FROM test_table t0_ WHERE t0_.str IS NOT NULL'
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:select'
       -
         key: db.parameters
         value: '[]'
+      -
+        key: db.statement
+        value: 'SELECT COUNT(t0_.id) AS sclr_0 FROM test_table t0_ WHERE t0_.str IS NOT NULL'
   -
     operationName: 'DBAL: TRANSACTION'
     tags:
+      -
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:transaction'
       -
         key: db.transaction.end
         value: commit
@@ -99,17 +135,23 @@ children:
         operationName: 'DBAL: DELETE test_table'
         tags:
           -
-            key: db.statement
-            value: 'DELETE FROM test_table WHERE id = ?'
+            key: auxmoney-opentracing-bundle.span-origin
+            value: 'DBAL:delete'
           -
             key: db.parameters
             value: '{"1":2}'
+          -
+            key: db.statement
+            value: 'DELETE FROM test_table WHERE id = ?'
   -
     operationName: 'DBAL: SELECT test_table'
     tags:
       -
-        key: db.statement
-        value: 'SELECT COUNT(t0_.id) AS sclr_0 FROM test_table t0_ WHERE t0_.str IS NOT NULL'
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:select'
       -
         key: db.parameters
         value: '[]'
+      -
+        key: db.statement
+        value: 'SELECT COUNT(t0_.id) AS sclr_0 FROM test_table t0_ WHERE t0_.str IS NOT NULL'
