--- a/Tests/Functional/FunctionalTest.dbal-prepared-statements.expected.yaml
+++ b/Tests/Functional/FunctionalTest.dbal-prepared-statements.expected.yaml
@@ -44,6 +44,30 @@ children:
         key: db.statement
         value: 'SELECT COUNT(*) FROM test_table WHERE str IS NOT NULL'
   -
+    operationName: 'DBAL: SELECT test_table'
+    tags:
+      -
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:select'
+      -
+        key: db.parameters
+        value: '[]'
+      -
+        key: db.statement
+        value: 'SELECT COUNT(*) FROM test_table WHERE str IS NOT NULL'
+  -
+    operationName: 'DBAL: SELECT test_table'
+    tags:
+      -
+        key: auxmoney-opentracing-bundle.span-origin
+        value: 'DBAL:select'
+      -
+        key: db.parameters
+        value: '[]'
+      -
+        key: db.statement
+        value: 'SELECT COUNT(*) FROM test_table WHERE str IS NOT NULL'
+  -
     operationName: 'DBAL: INSERT INTO test_table'
     tags:
       -
