--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
   "type": "symfony-bundle",
   "license": "MIT",
   "require": {
-    "php": "^7.4|^8.0",
+    "php": "^8.0",
     "ext-json": "*",
-    "auxmoney/opentracing-bundle-core": "^1.0",
+    "auxmoney/opentracing-bundle-core": "^1.3",
     "opentracing/opentracing": "^1.0.1",
     "doctrine/doctrine-bundle": "^1.11|^2.0",
     "doctrine/dbal": "^2.11"
@@ -29,11 +29,11 @@
     "phpstan/phpstan": "^1.5",
     "squizlabs/php_codesniffer": "^3.6",
     "phpmd/phpmd": "^2.12",
-    "php-coveralls/php-coveralls": "^2.5",
     "symfony/filesystem": "*",
     "symfony/process": "*",
     "symfony/yaml": "*",
-    "mtdowling/jmespath.php": "^2.6"
+    "mtdowling/jmespath.php": "^2.6",
+    "guzzlehttp/guzzle": "^7.5"
   },
   "autoload": {
     "psr-4": {
@@ -54,7 +54,7 @@
     ],
     "phpmd": "vendor/bin/phpmd . text cleancode,codesize,controversial,design,naming,unusedcode --exclude vendor,Tests",
     "phpcs": "vendor/bin/phpcs",
-    "phpunit": "phpdbg -qrr vendor/bin/phpunit --colors=never --testsuite=unit",
+    "phpunit": "XDEBUG_MODE=coverage vendor/bin/phpunit --colors=never --testsuite=unit",
     "phpunit-functional": [
       "vendor/auxmoney/opentracing-bundle-core/Tests/Functional/Scripts/checkEnvironment.sh",
       "vendor/auxmoney/opentracing-bundle-core/Tests/Functional/Scripts/setup.sh",
